tests/specs/ecosystem/eryue0220/unplugin_stylex/0_2_3.test
eryue0220/unplugin-stylex/0.2.3
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
Check file://<tmpdir>/src/index.ts
Check file://<tmpdir>/src/esbuild.ts
Check file://<tmpdir>/src/rollup.ts
Check file://<tmpdir>/src/rspack.ts
Check file://<tmpdir>/src/vite.ts
Check file://<tmpdir>/src/webpack.ts
error: TS2580 [ERROR]: Cannot find name 'process'.
export const isDevelopment = (process.env.NODE_ENV !== 'production' || process.env.BABEL_ENV !== 'production');
                              ~~~~~~~
    at file://<tmpdir>/src/core/constants.ts:1:31

TS2580 [ERROR]: Cannot find name 'process'.
export const isDevelopment = (process.env.NODE_ENV !== 'production' || process.env.BABEL_ENV !== 'production');
                                                                       ~~~~~~~
    at file://<tmpdir>/src/core/constants.ts:1:72

Found 2 errors.

